fix html semantic

--- a/index.html
+++ b/index.html
@@ -13,133 +13,133 @@
 
 <body>
 
-  <div class="page_wrapper">
+<div class="page_wrapper">
 
-    <header class="header">
-      <div class="header_wrapper">
-        <div class="section_wrapper max_width section header flex_container flex">
-          <h2 class="font_size logo_margin">
-            ReMotely
+  <header class="header">
+    <div class="header_wrapper">
+      <div class="section_wrapper max_width section header flex_container flex">
+        <h2 class="font_size logo_margin">
+          ReMotely
+        </h2>
+
+        <nav class="nav flex flex_container">
+          <ul class="link_flex_container flex-justify-end">
+            <li><a class="links font_size text_deco_none text_transform anchor_color" href="#">book</a></li>
+            <li><a class="links font_size text_deco_none text_transform anchor_color" href="#">explore</a></li>
+            <li><a class="links font_size  text_deco_none text_transform anchor_color" href="#">about</a></li>
+          </ul>
+          <div class="flex-justify-end">
+            <a class="sign font_size text_deco_none text_transform" href="#">sign in</a>
+          </div>
+        </nav>
+      </div>
+    </div>
+  </header>
+
+
+  <section class="green_section">
+    <div class=" section_hero">
+      <div class="section_container flex-j-center">
+        <div class="column flex-end-alignment phrase">
+          <div class="catch_phrase">
+            <h1 class="invite_phrase">
+              Work from a&nbsp;cabin near Helsinki
+            </h1>
+            <div class="button_container flex">
+              <button class="btn" type="submit">Explore</button>
+            </div>
+          </div>
+        </div>
+        <div class="column flex-end-alignment cottage">
+          <div class="photo">
+            <img class="main_photo" src="./switzphoto.jpg" alt="Swiss Cottage">
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
+  <section class="section second_page_container">
+    <h2 class="section_heading">
+      We offer a handpicked range of cabins for nature lovers in Europe to live and work
+      from for desired time.
+    </h2>
+    <div class="flex-j-center">
+      <div class="pros_container">
+        <div class="pros_photo ">
+          <img class="pros_pic" src="./forest.png" alt="pic of pros">
+        </div>
+        <div class="flex-j-center">
+          <h3 class="paragraph_header">Connection</h3>
+        </div>
+        <div class="paragraph_description flex-j-center">
+          <p class="text">
+            We provide a good internet connection in our remotest cabins
+          </p>
+        </div>
+      </div>
+      <div class="pros_container">
+        <div class="pros_photo">
+          <img class="pros_pic" src="./highway.png" alt="pic of pros">
+        </div>
+        <div class="flex-j-center">
+          <h3 class="paragraph_header">
+            Accesibility
+          </h3>
+        </div>
+        <div class="paragraph_description flex-j-center">
+          <p class="text">
+            Every Cabin is up in the nature but also easy to get to and to the towns around
+          </p>
+        </div>
+      </div>
+      <div class="pros_container">
+        <div class="pros_photo">
+          <img class="pros_pic" src="./mountains.png" alt="pic of pros">
+        </div>
+        <div class="flex-j-center">
+          <h3 class="paragraph_header">Close to nature</h3>
+        </div>
+        <div class="paragraph_description flex-j-center">
+          <p class="text">Every cabin means different areas to explore!</p>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="pink">
+    <div class="flex section_wrapper max_width">
+      <div class="left_side flex-j-center">
+        <div class="post_container constant_width">
+          <h2 class="third_page_header">
+            Work from somewhere special
           </h2>
-
-          <nav class="flex-justify-end nav_margin flex_container">
-            <ul class="link_flex_container flex-justify-end">
-              <li><a class="links font_size text_deco_none text_transform anchor_color" href="#">book</a></li>
-              <li><a class="links font_size text_deco_none text_transform anchor_color" href="#">explore</a></li>
-              <li><a class="links font_size  text_deco_none text_transform anchor_color" href="#">about</a></li>
-            </ul>
-            <div class="flex-justify-end margin_menu">
-              <a class="sign font_size text_deco_none text_transform" href="#">sign in</a>
-            </div>
-          </nav>
+          <p class="longer_paragraph">
+            We gather people who love nature and mountains and help them find perfect
+            spots
+            for a few weeks or even
+            months.
+            If your job is fully remote and you daydream of holidays, then why sit at home? Work as you
+            normally
+            do and
+            later let yourself dive into nature. Break the habit.
+          </p>
+        </div>
+        <div class="constant_width">
+          <button class="book_now" type="submit">
+            Book Now
+          </button>
         </div>
       </div>
-    </header>
-
-
-    <section class="green_section">
-      <div class=" section_hero">
-        <div class="section_container flex-j-center">
-          <div class="column flex-end-alignment phrase">
-            <div class="catch_phrase">
-              <h1 class="invite_phrase">
-                Work from a&nbsp;cabin near Helsinki
-              </h1>
-              <div class= "button_container flex">
-                <button class="btn" type="submit">Explore</button>
-              </div>
-            </div>
-          </div>
-          <div class="column flex-end-alignment cottage">
-            <div class="photo">
-              <img class="main_photo" src="./switzphoto.jpg" alt="Swiss Cottage">
-            </div>
-          </div>
-        </div>
+      <div class="right_side">
+        <img class="mountains_pic" src="./mountain_home.png" alt="mountain view">
       </div>
-    </section>
+    </div>
+  </section>
 
 
-    <section class="section second_page_container">
-      <h2 class="section_heading">
-        We offer a handpicked range of cabins for nature lovers in Europe to live and work
-        from for desired time.
-      </h2>
-      <div class="flex-j-center">
-        <div class="pros_container">
-            <div class="pros_photo ">
-              <img class="pros_pic" src="./forest.png" alt="pic of pros">
-            </div>
-            <div class="flex-j-center">
-              <h3 class="paragraph_header">Connection</h3>
-            </div>
-            <div class="paragraph_description flex-j-center">
-              <p class="text">
-                We provide a good internet connection in our remotest cabins
-              </p>
-            </div>
-        </div>
-        <div class="pros_container">
-            <div class="pros_photo">
-              <img class="pros_pic" src="./highway.png" alt="pic of pros">
-            </div>
-            <div class="flex-j-center">
-              <h3 class="paragraph_header">
-                Accesibility
-              </h3>
-            </div>
-            <div class="paragraph_description flex-j-center">
-              <p class="text">
-                Every Cabin is up in the nature but also easy to get to and to the towns around
-              </p>
-            </div>
-        </div>
-        <div class="pros_container">
-            <div class="pros_photo">
-              <img class="pros_pic" src="./mountains.png" alt="pic of pros">
-            </div>
-            <div class="flex-j-center">
-              <h3 class="paragraph_header">Close to nature</h3>
-            </div>
-            <div class="paragraph_description flex-j-center">
-              <p class="text">Every cabin means different areas to explore!</p>
-            </div>
-        </div>
-      </div>
-    </section>
-    <section class="pink">
-      <div class="flex section_wrapper max_width">
-        <div class="left_side flex-j-center">
-          <div class="post_container constant_width">
-            <h2 class="third_page_header">
-              Work from somewhere special
-            </h2>
-            <p class="longer_paragraph">
-              We gather people who love nature and mountains and help them find perfect
-              spots
-              for a few weeks or even
-              months.
-              If your job is fully remote and you daydream of holidays, then why sit at home? Work as you
-              normally
-              do and
-              later let yourself dive into nature. Break the habit.
-            </p>
-          </div>
-          <div class="constant_width">
-            <button class="book_now" type="submit">
-              Book Now
-            </button>
-          </div>
-        </div>
-        <div class="right_side">
-          <img class="mountains_pic" src="./mountain_home.png" alt="mountain view">
-        </div>
-      </div>
-    </section>
-
-
-    <section class=" fourth_page_container">
-      <div class="flex section_wrapper max_width padding">
+  <section class=" fourth_page_container">
+    <div class="flex section_wrapper max_width padding">
       <div class="left_side_fourth_page flex-end-alignment">
         <div>
           <img class="girl_pic" src="./girl.png" alt="girl pic">
@@ -168,26 +168,25 @@
           </ul>
         </div>
       </div>
-      </div>
-    </section>
+    </div>
+  </section>
 
 
-
-    <section class="section fifth_page_container">
-      <div class=" section_wrapper max_width flex">
+  <section class="section fifth_page_container">
+    <div class=" section_wrapper max_width flex">
       <div class="newsletter margin_footer flex-end-alignment">
         <div class="input_newsletter">
           <div class="input_header">
-            <label for="email newsletter_info" class="newsletter_info"> newsletter comming soon</label>
+            <label for="email_newsletter_info" class="newsletter_info"> newsletter comming soon</label>
           </div>
           <form class="input_input">
             <button>
-            <img class="arrow_button" src="arrow.svg" alt="arrow sign">
-          </button>
-            <input type="email" class="email newsletter_info" placeholder="your e-mail address">
-              </form>
-          </div>
+              <img class="arrow_button" src="arrow.svg" alt="arrow sign">
+            </button>
+            <input type="email" class="email newsletter_info" id="email_newsletter_info" placeholder="your e-mail address">
+          </form>
         </div>
+      </div>
       <div class="bot_nav_container flex-end-alignment">
         <ul class="ul_container_left">
           <li class="nav flex"><a class="bot_list text_deco_none anchor_color" href="#">Help Center</a></li>
@@ -196,33 +195,35 @@
         </ul>
         <ul class="ul_container_center">
           <li class="nav flex"><a class="bot_list text_deco_none anchor_color" href="#">About</a></li>
-          <li class="nav flex"><a class="bot_list text_deco_none anchor_color"  href="#">Contact</a></li>
+          <li class="nav flex"><a class="bot_list text_deco_none anchor_color" href="#">Contact</a></li>
           <li class="nav flex"><a class="bot_list text_deco_none anchor_color" href="#">Reviews</a></li>
         </ul>
         <ul class="ul_container_right">
           <li class="nav flex"><a class="bot_list text_deco_none anchor_color" href="#">Facebook</a></li>
           <li class="nav flex"><a class="bot_list text_deco_none anchor_color" href="#">Instagram</a></li>
           <li class="nav flex"><a class="bot_list text_deco_none anchor_color" href="#">Twitter</a></li>
+        </ul>
       </div>
     </div>
-    </section>
+  </section>
 
 
-
-    <footer class="section section_wrapper max_width">
-      <div class="last_footer_wrapper">
-        <div class="last_footer flex-justify-end">
-          <div class="footer_box flex-end-alignment">
-            <ul class="footer_list flex-justify-end">
-              <li class="footer_par"><a class="foot_link text_deco_none anchor_color" href="#">&copy; 2020 Remotely</a></li>
-              <li class="footer_par"><a class="foot_link text_deco_none anchor_color" href="#">Privacy Policy</a></li>
-              <li class="footer_par"><a class="foot_link text_deco_none anchor_color" href="#">Terms and Conditions</a></li>
-            </ul>
-          </div>
+  <footer class="section section_wrapper max_width">
+    <div class="last_footer_wrapper">
+      <div class="last_footer flex-justify-end">
+        <div class="footer_box flex-end-alignment">
+          <ul class="footer_list flex-justify-end">
+            <li class="footer_par"><a class="foot_link text_deco_none anchor_color" href="#">&copy; 2020 Remotely</a>
+            </li>
+            <li class="footer_par"><a class="foot_link text_deco_none anchor_color" href="#">Privacy Policy</a></li>
+            <li class="footer_par"><a class="foot_link text_deco_none anchor_color" href="#">Terms and Conditions</a>
+            </li>
+          </ul>
         </div>
       </div>
-    </footer>
-  </div>
+    </div>
+  </footer>
+</div>
 </body>
 
 </html>
