remove additional logo margin

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header class="header">
       <div class="header_wrapper">
         <div class="section_wrapper max_width section header flex_container flex">
-          <h2 class="font_size logo_margin">
+          <h2 class="font_size">
             ReMotely
           </h2>
 
