--- a/index.html
+++ b/index.html
@@ -13,25 +13,26 @@
 
 <body>
 
-<div class="page_wrapper">
+  <div class="page_wrapper">
 
-  <header class="header">
-    <div class="header_wrapper">
-      <div class="section_wrapper max_width section header flex_container flex">
-        <h2 class="font_size">
-          ReMotely
-        </h2>
+    <header class="header">
+      <div class="header_wrapper">
+        <div class="section_wrapper max_width section header flex_container flex">
+          <h2 class="font_size">
+            ReMotely
+          </h2>
 
-        <nav class="nav flex flex_container">
-          <ul class="link_flex_container flex-justify-end">
-            <li><a class="links font_size text_deco_none text_transform anchor_color" href="#">book</a></li>
-            <li><a class="links font_size text_deco_none text_transform anchor_color" href="#">explore</a></li>
-            <li><a class="links font_size  text_deco_none text_transform anchor_color" href="#">about</a></li>
-          </ul>
-          <div class="flex-justify-end">
-            <a class="sign font_size text_deco_none text_transform" href="#">sign in</a>
-          </div>
-        </nav>
+          <nav class="flex-justify-end nav_margin flex_container">
+            <ul class="link_flex_container flex-justify-end">
+              <li><a class="links font_size text_deco_none text_transform anchor_color" href="#">book</a></li>
+              <li><a class="links font_size text_deco_none text_transform anchor_color" href="#">explore</a></li>
+              <li><a class="links font_size  text_deco_none text_transform anchor_color" href="#">about</a></li>
+            </ul>
+            <div class="flex-justify-end margin_menu">
+              <a class="sign font_size text_deco_none text_transform" href="#">sign in</a>
+            </div>
+          </nav>
+        </div>
       </div>
     </div>
   </header>
