fixed top nav links

--- a/index.html
+++ b/index.html
@@ -17,20 +17,25 @@
 
   <header class="header">
     <div class="header_wrapper">
-      <div class="section_wrapper max_width section header flex_container flex">
+      <div class="section_wrapper max_width section header flex-justify-between ">
         <h2 class="font_size">
           ReMotely
         </h2>
-
         <nav class="nav flex flex_container">
           <ul class="link_flex_container flex-justify-end">
-            <li><a class="links font_size text_deco_none text_transform anchor_color" href="#">book</a></li>
-            <li><a class="links font_size text_deco_none text_transform anchor_color" href="#">explore</a></li>
-            <li><a class="links font_size  text_deco_none text_transform anchor_color" href="#">about</a></li>
+            <li>
+              <a class="links font_size text_deco_none text_transform anchor_color" href="#">book</a>
+            </li>
+            <li>
+              <a class="links font_size text_deco_none text_transform anchor_color" href="#">explore</a>
+            </li>
+            <li>
+              <a class="links font_size  text_deco_none text_transform anchor_color" href="#">about</a>
+            </li>
+            <li>
+              <a class="links font_size  text_deco_none text_transform anchor_color sign" href="#">sign in</a>
+            </li>
           </ul>
-          <div class="flex-justify-end">
-            <a class="sign font_size text_deco_none text_transform" href="#">sign in</a>
-          </div>
         </nav>
       </div>
     </div>
@@ -183,7 +188,8 @@
             <button>
               <img class="arrow_button" src="arrow.svg" alt="arrow sign">
             </button>
-            <input type="email" class="email newsletter_info" id="email_newsletter_info" placeholder="your e-mail address">
+            <input type="email" class="email newsletter_info" id="email_newsletter_info"
+                   placeholder="your e-mail address">
           </form>
         </div>
       </div>
