almost done pixel perfect

--- a/index.html
+++ b/index.html
@@ -18,18 +18,18 @@
     <header class="header">
       <div class="header_wrapper">
         <div class="section_wrapper max_width section header flex_container flex">
-          <h2 class="font_size">
+          <h2 class="font_size margin_header">
             ReMotely
           </h2>
 
           <nav class="flex-justify-end nav_margin flex_container">
-            <ul class="link_flex_container flex-justify-end">
-              <li><a class="links font_size text_deco_none text_transform anchor_color" href="#">book</a></li>
-              <li><a class="links font_size text_deco_none text_transform anchor_color" href="#">explore</a></li>
-              <li><a class="links font_size  text_deco_none text_transform anchor_color" href="#">about</a></li>
+            <ul class="link_flex_container flex-justify-end margin_menu_top">
+              <li><a class="links font_size_menu text_deco_none text_transform anchor_color" href="#">book</a></li>
+              <li><a class="links font_size_menu text_deco_none text_transform anchor_color" href="#">explore</a></li>
+              <li><a class="links font_size_menu  text_deco_none text_transform anchor_color" href="#">about</a></li>
             </ul>
             <div class="flex-justify-end margin_menu">
-              <a class="sign font_size text_deco_none text_transform" href="#">sign in</a>
+              <a class="sign font_size_sign text_deco_none text_transform" href="#">sign in</a>
             </div>
           </nav>
         </div>
@@ -95,7 +95,7 @@
           </p>
         </div>
       </div>
-      <div class="pros_container">
+      <div class="pros_container pros_con_right">
         <div class="pros_photo">
           <img class="pros_pic" src="./mountains.png" alt="pic of pros">
         </div>
@@ -111,7 +111,7 @@
   <section class="pink">
     <div class="flex section_wrapper max_width">
       <div class="left_side flex-j-center">
-        <div class="post_container constant_width">
+        <div class="post_container left_side_margin constant_width">
           <h2 class="third_page_header">
             Work from somewhere special
           </h2>
@@ -126,7 +126,7 @@
             later let yourself dive into nature. Break the habit.
           </p>
         </div>
-        <div class="constant_width">
+        <div class="constant_width button_book_margin">
           <button class="book_now" type="submit">
             Book Now
           </button>
