last things to be done

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
           </p>
           <ul class="unordered_list_for_numbers flex-justify-end">
             <li class="numbers_fourth_page">
-              <a class="text_deco_none anchor_color" href="#">1</a>
+              <a class="text_deco_none anchor_color one" href="#">1</a>
             </li>
             <li class="numbers_fourth_page">
               <a class="text_deco_none number_color" href="#">2</a>
