almost pixel perfect

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
           </form>
         </div>
       </div>
-      <div class="bot_nav_container flex-end-alignment">
+      <div class="bot_nav_container bot_nav_margin flex-end-alignment">
         <ul class="ul_container_left">
           <li class="nav flex"><a class="bot_list text_deco_none anchor_color" href="#">Help Center</a></li>
           <li class="nav flex"><a class="bot_list text_deco_none anchor_color" href="#">FAQ</a></li>
@@ -213,7 +213,7 @@
     <div class="last_footer_wrapper">
       <div class="last_footer flex-justify-end">
         <div class="footer_box flex-end-alignment">
-          <ul class="footer_list flex-justify-end">
+          <ul class="footer_list footer_margin flex-justify-end">
             <li class="footer_par"><a class="foot_link text_deco_none anchor_color" href="#">&copy; 2020 Remotely</a>
             </li>
             <li class="footer_par"><a class="foot_link text_deco_none anchor_color" href="#">Privacy Policy</a></li>
