first test of RWD push... not working at all

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="./style.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" media="(max-width: 767px)" href="./style_rwd.css">
 </head>
 
 <body>
@@ -51,7 +52,7 @@
             </div>
           </div>
         </div>
-        <div class="column flex-end-alignment cottage">
+        <div class="flex-end-alignment cottage">
           <div class="photo">
             <img class="main_photo" src="./switzphoto.jpg" alt="Swiss Cottage">
           </div>
