new branch pull

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <header class="header">
       <div class="header_wrapper">
-        <div class="section_wrapper max_width section header flex_container flex">
+        <div class="section_wrapper max_width flex_container flex">
           <h2 class="font_size margin_header">
             ReMotely
           </h2>
@@ -40,7 +40,7 @@
 
 
   <section class="green_section">
-    <div class=" section_hero">
+    <div class="section_hero">
       <div class="section_container flex-j-center">
         <div class="column flex-end-alignment phrase">
           <div class="catch_phrase">
