width set to auto

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <section class="green_section">
     <div class="section_hero">
       <div class="section_container flex-j-center">
-        <div class="column flex-end-alignment phrase">
+        <div class="column flex-end-alignment">
           <div class="catch_phrase">
             <h1 class="invite_phrase">
               Work from a&nbsp;cabin near Helsinki
