set second sector responsibility

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       We offer a handpicked range of cabins for nature lovers in Europe to live and work
       from for desired time.
     </h2>
-    <div class="flex-j-center">
+    <div class="flex-j-center flex_column">
       <div class="pros_container">
         <div class="pros_photo ">
           <img class="pros_pic" src="./forest.png" alt="pic of pros">
