applied some mentioned changes

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="./style.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" media="(max-width: 767px)" href="./style_rwd.css">
+  <link rel="stylesheet" href="./style_rwd.css">
 </head>
 
 <body>
@@ -70,7 +70,7 @@
     <div class="flex-j-center flex_column">
       <div class="pros_container">
         <div class="pros_photo ">
-          <img class="pros_pic" src="./forest.png" alt="pic of pros">
+          <img class="pros_pic pic" src="./forest.png" alt="pic of pros">
         </div>
         <div class="flex-j-center">
           <h3 class="paragraph_header">Connection</h3>
@@ -83,7 +83,7 @@
       </div>
       <div class="pros_container">
         <div class="pros_photo">
-          <img class="pros_pic" src="./highway.png" alt="pic of pros">
+          <img class="pros_pic pic" src="./highway.png" alt="pic of pros">
         </div>
         <div class="flex-j-center">
           <h3 class="paragraph_header">
@@ -98,7 +98,7 @@
       </div>
       <div class="pros_container pros_con_right">
         <div class="pros_photo">
-          <img class="pros_pic" src="./mountains.png" alt="pic of pros">
+          <img class="pros_pic pic" src="./mountains.png" alt="pic of pros">
         </div>
         <div class="flex-j-center">
           <h3 class="paragraph_header">Close to nature</h3>
@@ -134,7 +134,7 @@
         </div>
       </div>
       <div class="right_side">
-        <img class="mountains_pic" src="./mountain_home.png" alt="mountain view">
+        <img class="mountains_pic pic" src="./mountain_home.png" alt="mountain view">
       </div>
     </div>
   </section>
