some minor html changes

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="PL-pl">
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
@@ -15,7 +15,6 @@
 <body>
 
   <div class="page_wrapper">
-
     <header class="header">
       <div class="header_wrapper">
         <div class="section_wrapper max_width flex_container flex">
@@ -35,7 +34,7 @@
           </nav>
         </div>
       </div>
-    </div>
+    
   </header>
 
 
@@ -225,6 +224,7 @@
       </div>
     </div>
   </footer>
+</div>
 </div>
 </body>
 
