set width for existed media query

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   </section>
 
 
-  <section class="section second_page_container">
+  <section class="section second_page_container section_pink_wrapper">
     <h2 class="section_heading">
       We offer a handpicked range of cabins for nature lovers in Europe to live and work
       from for desired time.
