top menu changes

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div class="page_wrapper">
     <header class="header">
       <div class="header_wrapper">
-        <div class="section_wrapper max_width flex_container flex">
+        <div class="section_wrapper section_center_media max_width flex_container flex">
           <h2 class="font_size margin_header">
             ReMotely
           </h2>
