--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 
 
   <section class="section fifth_page_container">
-    <div class=" section_wrapper max_width flex">
+    <div class=" section_wrapper fifth_page_wrapper max_width flex">
       <div class="newsletter margin_footer flex-end-alignment">
         <div class="input_newsletter">
           <div class="input_header">
