my burger is not yet working

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./style_rwd.css">
-  <script src="hamburger_menu.js"></script>
 </head>
 
 <body>
@@ -23,25 +22,24 @@
             ReMotely
           </h2>
 
-          <button class="hamburger">
-            <span class="hamburger_box">
-              <span class="hamburger_inner"></span>
-            </span>
-          </button>
+         
           <nav class="flex-justify-end nav_margin flex_container navigation">
-            <ul class="link_flex_container flex-justify-end margin_menu_top">
-              <li class="nav_item"><a class="links font_size_menu text_deco_none text_transform anchor_color burger_link" href="#">book</a></li>
-              <li class="nav_item"><a class="links font_size_menu text_deco_none text_transform anchor_color burger_link" href="#">explore</a></li>
-              <li class="nav_item"><a class="links font_size_menu  text_deco_none text_transform anchor_color burger_link" href="#">about</a></li>
-            </ul>
-            <div class="flex-justify-end margin_menu">
-              <a class="sign font_size_sign text_deco_none text_transform burger_link" href="#">sign in</a>
-            </div>
-          </nav>
-        </div>
-      </div>
-  </header>
-
+            <div class="menu_toggle">
+         <input class="checkbox" type="checkbox"/>
+             <span></span>
+             <span class="invisible"></span>
+             <span></span>
+             <ul class="link_flex_container flex-justify-end margin_menu_top">
+               <li class="nav_item"><a class="links font_size_menu text_deco_none text_transform anchor_color burger_link" href="#">book</a></li>
+               <li class="nav_item"><a class="links font_size_menu text_deco_none text_transform  anchor_color burger_link" href="#">explore</a></li>
+               <li class="nav_item"><a class="links font_size_menu  text_deco_none text_transform anchor_color burger_link" href="#">about</a></li>
+               <li class="nav_item"><a class="links sign font_size_sign text_deco_none text_transform anchor_color burger_link" href="#">sign in</a></li>
+             </ul>
+             </div>
+           </nav>
+         </div>
+       </div>
+   </header>
 
   <section class="green_section">
     <div class="section_hero">
